--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="text-muted text-center my-4" > Weather app</h1>
         
         <form action="" class="change-location my-4 text-center text-muted">
-            <label for="city">Enter a location foe weather information</label>
+            <label for="city">Enter a location for weather information</label>
             <input type="text" name="city" class="form-control p-4">
         </form>
         <div class="card shadow-lg rounded d-none">
