--- a/index.html
+++ b/index.html
@@ -1,40 +1,28 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/styles.css">
-    
-    <title>Weather App</title>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Weather</title>
+ <link rel='stylesheet' href="style.css">
+ <script type="module" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.esm.js"></script>
+ <script nomodule="" src="https://unpkg.com/ionicons@5.1.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
+ <section>
+ <div class="container">
+ <div class="details">
+ <h1 class="pre-text">Welcome & Search By Location</h1>
+ </div>
+ <form>
+ <input type="text" placeholder="Search Location..." name="location">
+ <button type="submit">
+ <ion-icon name="chevron-forward-outline"></ion-icon>
+ </button>
+ </form>
+ </div>
+ </section>
 
-
-    <div class="container my-5 mx-auto">
-        <h1 class="text-muted text-center my-4" > Weather app</h1>
-        
-        <form action="" class="change-location my-4 text-center text-muted">
-            <label for="city">Enter a location for weather information</label>
-            <input type="text" name="city" class="form-control p-4">
-        </form>
-        <div class="card shadow-lg rounded d-none">
-            <img src="https://via.placeholder.com/400x300" class="time card-img-top">
-            <div class="icon bg-light mx-auto text-center">
-                <!-- icon -->
-                <img src="" alt="">
-            </div>
-            <div class="text-muted text-uppercase text-center details">
-                <h5 class="my-3">City name</h5>
-                <div class="my-3">Weather Condition</div>
-                <div class="display-4 my-4">
-                <span>temp</span>
-                <span> &deg;C</span>
-            </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="scripts/forcast.js"></script>
-    <script src="scripts/app.js"></script>
+ <script src='/main.js'></script>
 </body>
 </html>
